--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,13 +1,3 @@
-/*.dropdown-menu{
-    margin-left:248px;
-    margin-top:10px;
-}*/
-
-
-
-
-
-
 body{
     background-color:#4F6781;
 }
@@ -16,42 +6,51 @@ body{
 a:link{
     text-decoration: none;
 }
-a:hover{
-    color:white;
+a:hover {
+    color: #ea6060;
 }
 
-
-.leftMenu{
-    height:55px;
-    background-color:white;
-}
 .leftMenu:hover{
     color:white;
     background-color:lightblue;
 }
-.leftMenuContact{
-    background-color:#8c8c8c;
-    font-weight:bold;
-    font-size:15px;
-    height:140px;
-    color:white;
-    
+.leftMenuContact {
+    background-color: #8c8c8c;
+    font-weight: bold;
+    font-size: 15px;
+    color: white;
+}
+.leftMenuContact .containerInner {
+    margin: 10px;
+    display: inline-block;
 }
 .leftMenuGliph{
     margin:15px;
 }
-
-.BlogType{
+.leftMenuBoby div {
+    max-width: 260px;
+    display: block;
+    margin: auto;
+    text-align: left;
+}
+.BlogType {
     font-style: oblique;
     font-variant: small-caps;
     font-family: "Times New Roman", Georgia, Serif;
-    color:white;
-    background-color:#142840;
+    color: white;
+    background-color: #142840;
+    text-align: left;
 }
 
-.SocCircle{
-    color:#C5CED2;
-    background-color:white;
+.SocCircle {
+    color: #C5CED2;
+    background-color: #4D6BAB;
+}
+.SocCircle div {
+    max-width: 114px;
+    text-align: left;
+    display: block;
+    margin: 7px auto;
 }
 
 .soc{
@@ -67,17 +66,14 @@ a:hover{
     margin:5px;
 }
 
-.arrow{
-    background-color:lightblue;
-    border-radius: 50%;
-    margin-left:20px;
+.arrow {
+    margin-left: 20px;
 }
-.socBigIcon{
-    background-color:lightblue;
-    margin:20px;  
+.socBigIcon {
+    margin: 20px;
 }
-.socBigIconN{
-    margin-left:35px;
+.socBigIconN {
+    margin: 0px;
     font-weight: bold;
 }
 
