--- a/public_html/style.css
+++ b/public_html/style.css
@@ -67,6 +67,7 @@ a:hover {
     color: white;
     background-color: #142840;
     text-align: left;
+    padding: 1px;
 }
 
 .BlogType .containerInner {
@@ -92,6 +93,8 @@ a:hover {
 
 .follow div {
     box-shadow: 5px 5px 10px black;
+    text-align: center;
+    padding: 1px 0px;
 }
 
 .soc {
@@ -254,10 +257,64 @@ footer {
         display: inline-block;
         width: 49%;
     }
+    .btn {
+        width: 100%;
+    }
     .leftMenuBoby {
         display: none;
     }
     body {
         text-align: center;
+    }
+    .col-lg-1,
+    .col-lg-10,
+    .col-lg-11,
+    .col-lg-12,
+    .col-lg-2,
+    .col-lg-3,
+    .col-lg-4,
+    .col-lg-5,
+    .col-lg-6,
+    .col-lg-7,
+    .col-lg-8,
+    .col-lg-9,
+    .col-md-1,
+    .col-md-10,
+    .col-md-11,
+    .col-md-12,
+    .col-md-2,
+    .col-md-3,
+    .col-md-4,
+    .col-md-5,
+    .col-md-6,
+    .col-md-7,
+    .col-md-8,
+    .col-md-9,
+    .col-sm-1,
+    .col-sm-10,
+    .col-sm-11,
+    .col-sm-12,
+    .col-sm-2,
+    .col-sm-3,
+    .col-sm-4,
+    .col-sm-5,
+    .col-sm-6,
+    .col-sm-7,
+    .col-sm-8,
+    .col-sm-9,
+    .col-xs-1,
+    .col-xs-10,
+    .col-xs-11,
+    .col-xs-12,
+    .col-xs-2,
+    .col-xs-3,
+    .col-xs-4,
+    .col-xs-5,
+    .col-xs-6,
+    .col-xs-7,
+    .col-xs-8,
+    .col-xs-9 {
+        padding-right: 0px;
+        padding-left: 0px;
     }
 }
